bindings/go/ffi/slatedb.h

uint16_t uniffi_slatedb_ffi_checksum_method_ffidbreader_shutdown(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbreaderbuilder_build(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbreaderbuilder_with_checkpoint_id(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbreaderbuilder_with_merge_operator(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbreaderbuilder_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbreaderbuilder_with_wal_object_store(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbsnapshot_get(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbsnapshot_get_key_value(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbsnapshot_get_key_value_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbsnapshot_get_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbsnapshot_scan(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbsnapshot_scan_prefix(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbsnapshot_scan_prefix_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbsnapshot_scan_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbtransaction_commit(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbtransaction_commit_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbtransaction_delete(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbtransaction_get(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbtransaction_get_key_value(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbtransaction_get_key_value_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbtransaction_get_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbtransaction_id(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbtransaction_mark_read(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbtransaction_merge(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbtransaction_merge_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbtransaction_put(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbtransaction_put_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbtransaction_rollback(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbtransaction_scan(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbtransaction_scan_prefix(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbtransaction_scan_prefix_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbtransaction_scan_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbtransaction_seqnum(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbtransaction_unmark_write(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffilogcallback_log(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffimergeoperator_merge(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffisettings_set(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffisettings_to_json_string(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffiwalfile_id(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffiwalfile_iterator(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffiwalfile_metadata(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffiwalfile_next_file(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffiwalfile_next_id(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffiwalfile_shutdown(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffiwalfileiterator_next(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffiwalfileiterator_shutdown(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffiwalreader_get(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffiwalreader_list(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffiwalreader_shutdown(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffiwritebatch_delete(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffiwritebatch_merge(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffiwritebatch_merge_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffiwritebatch_put(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffiwritebatch_put_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_constructor_ffidbbuilder_new(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_constructor_ffidbreaderbuilder_new(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_constructor_ffiobjectstore_from_env(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_constructor_ffiobjectstore_resolve(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_constructor_ffisettings_default(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_constructor_ffisettings_from_env(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_constructor_ffisettings_from_env_with_default(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_constructor_ffisettings_from_file(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_constructor_ffisettings_from_json_string(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_constructor_ffisettings_load(void
    
);