bindings/python/src/slatedb/ffi/slatedb.py

    ctypes.c_uint16
)
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbreader_shutdown.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbreader_shutdown.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbreaderbuilder_build.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbreaderbuilder_build.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbreaderbuilder_with_checkpoint_id.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbreaderbuilder_with_checkpoint_id.restype = (
    ctypes.c_uint16
)
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbreaderbuilder_with_merge_operator.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbreaderbuilder_with_merge_operator.restype = (
    ctypes.c_uint16
)
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbreaderbuilder_with_options.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbreaderbuilder_with_options.restype = (
    ctypes.c_uint16
)
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbreaderbuilder_with_wal_object_store.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbreaderbuilder_with_wal_object_store.restype = (
    ctypes.c_uint16
)
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbsnapshot_get.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbsnapshot_get.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbsnapshot_get_key_value.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbsnapshot_get_key_value.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbsnapshot_get_key_value_with_options.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbsnapshot_get_key_value_with_options.restype = (
    ctypes.c_uint16
)
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbsnapshot_get_with_options.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbsnapshot_get_with_options.restype = (
    ctypes.c_uint16
)
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbsnapshot_scan.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbsnapshot_scan.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbsnapshot_scan_prefix.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbsnapshot_scan_prefix.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbsnapshot_scan_prefix_with_options.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbsnapshot_scan_prefix_with_options.restype = (
    ctypes.c_uint16
)
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbsnapshot_scan_with_options.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbsnapshot_scan_with_options.restype = (
    ctypes.c_uint16
)
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_commit.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_commit.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_commit_with_options.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_commit_with_options.restype = (
    ctypes.c_uint16
)
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_delete.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_delete.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_get.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_get.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_get_key_value.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_get_key_value.restype = (
    ctypes.c_uint16
)
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_get_key_value_with_options.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_get_key_value_with_options.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_get_with_options.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_get_with_options.restype = (
    ctypes.c_uint16
)
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_id.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_id.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_mark_read.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_mark_read.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_merge.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_merge.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_merge_with_options.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_merge_with_options.restype = (
    ctypes.c_uint16
)
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_put.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_put.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_put_with_options.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_put_with_options.restype = (
    ctypes.c_uint16
)
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_rollback.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_rollback.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_scan.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_scan.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_scan_prefix.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_scan_prefix.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_scan_prefix_with_options.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_scan_prefix_with_options.restype = (
    ctypes.c_uint16
)
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_scan_with_options.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_scan_with_options.restype = (
    ctypes.c_uint16
)
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_seqnum.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_seqnum.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_unmark_write.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbtransaction_unmark_write.restype = (
    ctypes.c_uint16
)
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffilogcallback_log.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffilogcallback_log.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffimergeoperator_merge.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffimergeoperator_merge.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffisettings_set.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffisettings_set.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffisettings_to_json_string.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffisettings_to_json_string.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffiwalfile_id.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffiwalfile_id.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffiwalfile_iterator.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffiwalfile_iterator.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffiwalfile_metadata.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffiwalfile_metadata.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffiwalfile_next_file.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffiwalfile_next_file.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffiwalfile_next_id.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffiwalfile_next_id.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffiwalfile_shutdown.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffiwalfile_shutdown.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffiwalfileiterator_next.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffiwalfileiterator_next.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffiwalfileiterator_shutdown.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffiwalfileiterator_shutdown.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffiwalreader_get.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffiwalreader_get.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffiwalreader_list.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffiwalreader_list.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffiwalreader_shutdown.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffiwalreader_shutdown.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffiwritebatch_delete.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffiwritebatch_delete.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffiwritebatch_merge.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffiwritebatch_merge.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffiwritebatch_merge_with_options.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffiwritebatch_merge_with_options.restype = (
    ctypes.c_uint16
)
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffiwritebatch_put.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffiwritebatch_put.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffiwritebatch_put_with_options.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffiwritebatch_put_with_options.restype = (
    ctypes.c_uint16
)
_UniffiLib.uniffi_slatedb_ffi_checksum_constructor_ffidbbuilder_new.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_constructor_ffidbbuilder_new.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_constructor_ffidbreaderbuilder_new.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_constructor_ffidbreaderbuilder_new.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_constructor_ffiobjectstore_from_env.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_constructor_ffiobjectstore_from_env.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_constructor_ffiobjectstore_resolve.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_constructor_ffiobjectstore_resolve.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_constructor_ffisettings_default.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_constructor_ffisettings_default.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_constructor_ffisettings_from_env.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_constructor_ffisettings_from_env.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_constructor_ffisettings_from_env_with_default.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_constructor_ffisettings_from_env_with_default.restype = (
    ctypes.c_uint16
)
_UniffiLib.uniffi_slatedb_ffi_checksum_constructor_ffisettings_from_file.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_constructor_ffisettings_from_file.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_constructor_ffisettings_from_json_string.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_constructor_ffisettings_from_json_string.restype = (
    ctypes.c_uint16
)
_UniffiLib.uniffi_slatedb_ffi_checksum_constructor_ffisettings_load.argtypes = ()
